Init new Design-System in a more Engineering fashion.

--- a/docs/css/kolibri-light-palette.css
+++ b/docs/css/kolibri-light-palette.css
@@ -8,6 +8,8 @@ todo: color->palette
 
 :root {
 
+    --kb-color-purple-800: hsl(263, 100%, 25%);
+
     /* --- purple --- */
     --kb-color-rgb-purple-800:   #310082;
     --kb-color-rgb-purple-700:   #4300B3;
