Build an example with the new Kolibri-Colors

--- a/docs/css/kolibri-colors.css
+++ b/docs/css/kolibri-colors.css
@@ -1,4 +1,4 @@
-/*@import "./kolibri-light-palette.css";*/
+/*@import "./kolibri-light-palette.css";
 
 /**
  The semantic colors. Users must choose a palette to make this work. See kolibri-base.css.
