--- a/docs/css/kolibri-colors.css
+++ b/docs/css/kolibri-colors.css
@@ -1,68 +1,68 @@
-/*@import "./kolibri-light-palette.css";
+@import "./kolibri-palette.css";
 
 /**
- The semantic colors. Users must choose a palette to make this work. See kolibri-base.css.
+ The semantic colors. 
  */
 
 :root {
 
     /* --- primary --- */
-    --kb-rgb-primary-dark:         var(--kb-color-rgb-purple-700);
-    --kb-rgb-primary-accent:       var(--kb-color-rgb-purple-500);
-    --kb-rgb-primary-light:        var(--kb-color-rgb-purple-200);
-    --kb-rgb-primary-bg:           var(--kb-color-rgb-purple-100);
-    --kb-hsla-primary-dark:        var(--kb-color-hsl-purple-700);
-    --kb-hsla-primary-accent:      var(--kb-color-hsl-purple-500);
-    --kb-hsla-primary-light:       var(--kb-color-hsl-purple-200);
-    --kb-hsla-primary-bg:          var(--kb-color-hsl-purple-100);
+
+    --kolibri-color-primary-dark:        var(--kolibri-palette-purple-700);
+    --kolibri-color-primary-accent:      var(--kolibri-palette-purple-500);
+    --kolibri-color-primary-light:       var(--kolibri-palette-purple-200);
+    --kolibri-color-primary-bg:          var(--kolibri-palette-purple-100);
 
 
     /* --- secondary --- */
-    --kb-rgb-secondary-dark:       var(--kb-color-rgb-blue-800);
-    --kb-rgb-secondary-accent:     var(--kb-color-rgb-blue-500);
-    --kb-rgb-secondary-light:      var(--kb-color-rgb-blue-200);
-    --kb-rgb-secondary-bg:         var(--kb-color-rgb-blue-100);
-    --kb-hsla-secondary-dark:      var(--kb-color-hsl-blue-800);
-    --kb-hsla-secondary-accent:    var(--kb-color-hsl-blue-500);
-    --kb-hsla-secondary-light:     var(--kb-color-hsl-blue-200);
-    --kb-hsla-secondary-bg:        var(--kb-color-hsl-blue-100);
+
+    --kolibri-color-secondary-dark:      var(--kolibri-palette-blue-800);
+    --kolibri-color-secondary-accent:    var(--kolibri-palette-blue-500);
+    --kolibri-color-secondary-light:     var(--kolibri-palette-blue-200);
+    --kolibri-color-secondary-bg:        var(--kolibri-palette-blue-100);
 
 
     /* --- success --- */
-    --kb-rgb-success-dark:         var(--kb-color-rgb-green-800);
-    --kb-rgb-success-accent:       var(--kb-color-rgb-green-500);
-    --kb-rgb-success-light:        var(--kb-color-rgb-green-200);
-    --kb-rgb-success-bg:           var(--kb-color-rgb-green-100);
-    --kb-hsla-success-dark:        var(--kb-color-hsl-green-800);
-    --kb-hsla-success-accent:      var(--kb-color-hsl-green-500);
-    --kb-hsla-success-light:       var(--kb-color-hsl-green-200);
-    --kb-hsla-success-bg:          var(--kb-color-hsl-green-100);
+
+    --kolibri-color-success-dark:        var(--kolibri-palette-green-800);
+    --kolibri-color-success-accent:      var(--kolibri-palette-green-500);
+    --kolibri-color-success-light:       var(--kolibri-palette-green-200);
+    --kolibri-color-success-bg:          var(--kolibri-palette-green-100);
 
 
     /* --- warning --- */
-    --kb-rgb-warning-dark:         var(--kb-color-rgb-yellow-600);
-    --kb-rgb-warning-accent:       var(--kb-color-rgb-yellow-500);
-    --kb-rgb-warning-light:        var(--kb-color-rgb-yellow-200);
-    --kb-rgb-warning-bg:           var(--kb-color-rgb-yellow-100);
-    --kb-hsla-warning-dark:        var(--kb-color-hsl-yellow-600);
-    --kb-hsla-warning-accent:      var(--kb-color-hsl-yellow-500);
-    --kb-hsla-warning-light:       var(--kb-color-hsl-yellow-200);
-    --kb-hsla-warning-bg:          var(--kb-color-hsl-yellow-100);
+
+    --kolibri-color-warning-dark:        var(--kolibri-palette-yellow-600);
+    --kolibri-color-warning-accent:      var(--kolibri-palette-yellow-500);
+    --kolibri-color-warning-light:       var(--kolibri-palette-yellow-200);
+    --kolibri-color-warning-bg:          var(--kolibri-palette-yellow-100);
 
 
     /* --- danger --- */
-    --kb-rgb-danger-dark:          var(--kb-color-rgb-pink-900);
-    --kb-rgb-danger-accent:        var(--kb-color-rgb-pink-500);
-    --kb-rgb-danger-light:         var(--kb-color-rgb-pink-200);
-    --kb-rgb-danger-bg:            var(--kb-color-rgb-pink-100);
-    --kb-hsla-danger-dark:         var(--kb-color-hsl-pink-900);
-    --kb-hsla-danger-accent:       var(--kb-color-hsl-pink-500);
-    --kb-hsla-danger-light:        var(--kb-color-hsl-pink-200);
-    --kb-hsla-danger-bg:           var(--kb-color-hsl-pink-100);
+
+    --kolibri-color-danger-dark:         var(--kolibri-palette-pink-800);
+    --kolibri-color-danger-accent:       var(--kolibri-palette-pink-500);
+    --kolibri-color-danger-light:        var(--kolibri-palette-pink-200);
+    --kolibri-color-danger-bg:           var(--kolibri-palette-pink-100);
 
 
     /* --- gradient - kolibri --- */
-    --kb-gradient-rgb-primary:     linear-gradient(145deg,
-                                    var(--kb-color-rgb-purple-500) 100%);
-                                    var(--kb-color-rgb-pink-500)   0%,
+    --kolibri-color-gradient-primary:    linear-gradient(145deg,
+                                            var(--kolibri-palette-pink-500)     0%,
+                                            var(--kolibri-palette-purple-500) 100%);
+
+    /* --- semantic --- */
+
+    /* the color that identifies the Kolibri product */
+    --kolibri-color-product: var(--kolibri-palette-purple-700);
+
+    --kolibri-color-shadow:  color-mix(in srgb, var(--kolibri-color-product) 20%, transparent 80%);
+    --kolibri-box-shadow:    0 4px  8px 0 var(--kolibri-color-shadow),
+                             0 6px 20px 0 var(--kolibri-color-shadow);
+
+    --kolibri-color-accent:  var(--kolibri-palette-lavender-500);
+    --kolibri-color-output:  var(--kolibri-palette-blue-700);
+    --kolibri-color-ok:      var(--kolibri-palette-green-600);
+    --kolibri-color-select:  var(--kolibri-palette-yellow-400);
+    --kolibri-color-neutral: var(--kolibri-palette-mono-400);
 }
