--- a/docs/src/examples/WorkingHours.css
+++ b/docs/src/examples/WorkingHours.css
@@ -32,6 +32,7 @@ fieldset:disabled {
 
 output {
     color: var(--kolibri-color-output);
+    font-variant-numeric: tabular-nums;
 }
 
 /*noinspection ALL*/
