--- a/docs/css/kolibri-base.css
+++ b/docs/css/kolibri-base.css
@@ -73,15 +73,38 @@ figcaption {
     font-size:      var(--font-size-caption);
     text-align:     end;
 }
+/* --- end typography --- */
+
+/* --- default element appearance --- */
 ul {
     padding-left:       1em;
 }
 ul li::marker {
   color:                var(--kb-hsla-primary-accent);
 }
+
 figure {
     margin-inline:      0;
 }
+
+em {                    /* emphasis looks like highlighted with text marker */
+    position:           relative;
+    &::before {
+        content:        "";
+        position:       absolute;
+        inset:          -3px;
+        background-color: var(--kolibri-color-select);
+        z-index:        -10;
+        rotate:         -2deg;
+        opacity:        60%;
+    }
+}
+
+a[href^="http"]::after { /* external link */
+    content:            " ↗";
+    opacity:            .3;
+}
+/* --- end default element appearance --- */
 
 /* --- default invalid handling --- */
 :invalid {
@@ -101,12 +124,12 @@ label + span { /* the "holder" span for the input comes right after a label */
 }
 label + span > input + span.invalidation_marker {
     /* background is transparent by default, so nothing is shown unless input becomes invalid */
-    position:   absolute; /* get it out of the stacking context */
-    top:        0;
-    left:       0;
-    width:      1ch;
-    aspect-ratio: 1;
-    transform:  translateX(-5ch);
+    position:       absolute; /* get it out of the stacking context */
+    top:            0;
+    left:           0;
+    width:          1ch;
+    aspect-ratio:   1;
+    transform:      translateX(-5ch);
 }
 label + span > input:invalid + span.invalidation_marker {
     background-image: radial-gradient(circle closest-side, white 0%, white 20%, var(--kolibri-color-accent) 99%, transparent 100%);
@@ -122,8 +145,8 @@ label + span > input:invalid + span.invalidation_marker {
    Since the logo is decorative only, we avoid having to set fake "alt" attributes.
  */
 
-.kolibri-logo {
-	width:              342px;
+.kolibri-logo {         /* for getting the logo from svg file, inline SVG element is in kolibriStyle.js */
+	width:              342px;                       /* default - you might want to override this with inline style */
 	aspect-ratio:       1;
 	background-image:   url("../img/logo/logo.svg"); /* keep in one place */
 	background-repeat:  no-repeat;
@@ -132,7 +155,7 @@ label + span > input:invalid + span.invalidation_marker {
 
 /* --- fun stuff with the logo --- */
 
-.kolibri-logo-anim {
+.kolibri-logo-anim {                                /* works for both svg file or svg element */
 	animation:          kolibri_fly_in 2s ease;
     .wing {
         animation-name:            kolibri-flapping;
@@ -165,7 +188,7 @@ label + span > input:invalid + span.invalidation_marker {
 
 
 @media (prefers-reduced-motion: reduce) {
-    .kolibri-logo-anim {
+    * {
         animation-duration: 0.01ms ;
   }
 }
@@ -201,19 +224,6 @@ a.skip-link:not(:focus):not(:active) {
     max-width:      70ch;
     text-rendering: optimizeLegibility;
     text-wrap:      pretty;
-    letter-spacing: 0.03em;
-}
-em {
-    position: relative;
-    &::before {
-        content:"";
-        position: absolute;
-        inset:  -3px;
-        background-color: var(--kolibri-color-select);
-        z-index: -1;
-        rotate: -2deg;
-        opacity: 60%;
-    }
 }
 
 /* --- end of utility classes --- */
