--- a/docs/css/kolibri-base.css
+++ b/docs/css/kolibri-base.css
@@ -237,3 +237,92 @@ a.skip-link:not(:focus):not(:active) {
 }
 
 /* --- end of utility classes --- */
+
+[popover] {             /* style that pops for all elements with popover attribute */
+      flex-direction:     column;
+      gap:                .5em;
+      background-image:   linear-gradient(170deg, #4c4cc6 45%, darkblue 50%, darkblue 80%, #4c4cc6);
+      box-shadow:         .2em .2em  1em 0 lightslategray,
+                          0    0    .5em 0 white           inset;
+      border-width:       0;
+      border-radius:      .5em;
+      color:              white;
+      font-family:        system-ui;
+      padding:            1em;
+  }
+
+  :popover-open {
+      animation-name:             appear;
+      animation-duration:         .5s;
+      animation-timing-function:  ease-in-out;
+      animation-fill-mode:        forwards;
+  }
+  :popover-open::backdrop {
+      background-color:           color-mix(in hsl, white, transparent);
+      transition:                 background-color 1s linear;
+      @starting-style {
+          background-color:       transparent;
+      }
+  }
+
+  .popover_anchor {
+      /* anchor-name will be set on the element */
+      position:           relative;
+  }
+  .popover_tooltip {
+      /* position-anchor will be set on the element */
+      position:           absolute;   /* override the popover-hidden default */
+      inset:              unset;
+      top:                anchor(bottom);
+      left:               anchor(left);
+
+      transform-origin:   top center; /* makes expandY a drop-down */
+  }
+.popover_tooltip:popover-open {
+      display:                    flex;              /* override */
+      animation-name:             appear, expandY;
+  }
+
+  @keyframes appear {
+      from { opacity: 0; }
+      to   { opacity: 1; }
+  }
+  @keyframes expandY {
+      from {  transform: scaleY(0); }
+      to   {  transform: scaleY(1); }
+  }
+
+  .icon#icon_christmas_tree {
+      fill:             white;
+      background-color: transparent;
+  }
+  .icon#icon_christmas_tree polygon {
+      fill:             yellow;
+      filter:           brightness(2) drop-shadow(0 0 2em yellow);
+      transform:        translateX(-40%) scale(1.2);
+      transition:       all 2s ease-in-out;
+      @starting-style {
+          transform:        translateX(40%) scale(0.8);
+      }
+  }
+
+.icon#icon_christmas_tree path:nth-child(1) {
+    transform-origin: center 90% ;
+}
+.icon#icon_christmas_tree path:nth-child(2) {
+    transform-origin: center 70% ;
+    animation-delay: 3.1s;
+}
+.icon#icon_christmas_tree path:nth-child(3) {
+    transform-origin: center  30%;
+}
+.icon#icon_christmas_tree path {
+    animation: shake .2s ease-in-out;
+    animation-delay: 3s;
+}
+@keyframes shake {
+    0%   { transform: rotate(0deg)}
+    30%  { transform: rotate(-10deg)}
+    60%  { transform: rotate(6deg)}
+    100%   { transform: rotate(0deg)}
+}
