input projector: cleanup

--- a/docs/css/kolibri-base.css
+++ b/docs/css/kolibri-base.css
@@ -258,7 +258,7 @@ a.skip-link:not(:focus):not(:active) {
       animation-fill-mode:        forwards;
   }
   :popover-open::backdrop {
-      background-color:           color-mix(in hsl, white, transparent);
+      background-color:           color-mix(in hsl, white, transparent 70%);
       transition:                 background-color 1s linear;
       @starting-style {
           background-color:       transparent;
@@ -306,23 +306,23 @@ a.skip-link:not(:focus):not(:active) {
       }
   }
 
-.icon#icon_christmas_tree path:nth-child(1) {
-    transform-origin: center 90% ;
+.icon#icon_christmas_tree path {
+    animation: shake .2s ease-in-out;
+    animation-delay: 3s;
+}
+.icon#icon_christmas_tree path:nth-child(3) {
+    transform-origin: center  30%;
 }
 .icon#icon_christmas_tree path:nth-child(2) {
     transform-origin: center 70% ;
     animation-delay: 3.1s;
 }
-.icon#icon_christmas_tree path:nth-child(3) {
-    transform-origin: center  30%;
-}
-.icon#icon_christmas_tree path {
-    animation: shake .2s ease-in-out;
-    animation-delay: 3s;
+.icon#icon_christmas_tree path:nth-child(1) {
+    transform-origin: center 90% ;
 }
 @keyframes shake {
-    0%   { transform: rotate(0deg)}
-    30%  { transform: rotate(-10deg)}
-    60%  { transform: rotate(6deg)}
-    100%   { transform: rotate(0deg)}
+      0%   { transform: rotate(  0deg)}
+     30%   { transform: rotate(-10deg)}
+     60%   { transform: rotate(  6deg)}
+    100%   { transform: rotate(  0deg)}
 }
